# ansible-akeyless

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION.md  README.md  SECURITY.md  flake.nix  galaxy.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  missing-endpoint.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ansible-lint.yml  ansible-test.yml  auto-bump.yml  auto-merge.yml  ci.yml  codeql.yml  coverage-matrix.yml  docs-lint.yml  docs-publish.yml  integration-live.yml  live-integration.yml  matrix.yml  mutation-test.yml  published-install.yml  release.yml  upstream-watch.yml
docs/: index.md
docs/reference/: architecture.md  authentication.md
docs/walkthroughs/: awx-aap-integration.md  bootstrap-host.md  dynamic-secrets.md  install-tls-cert.md  inventory-from-akeyless.md  migration.md  module-defaults.md  quickstart.md  secret-to-file.md  token-caching.md  troubleshooting.md
examples/: README.md  certificate_provision.yml  check_mode_demo.yml  dynamic_secret_aws.yml  role_and_auth_method.yml  rotated_secret_with_target.yml  static_secret.yml  uid_token_lifecycle.yml
examples/live/: README.md  dynamic_secret_aws.yml  lookup_secret.yml  rotated_secret_with_target.yml  uid_token_lifecycle.yml
meta/: runtime.yml
playbooks/: fetch_secrets_into_env_file.yml  install_certificate_with_defaults.yml
plugins/action/: secret_to_file.py
plugins/cache/: akeyless_token.py
plugins/callback/: akeyless_redactor.py
plugins/doc_fragments/: auth.py
plugins/filter/: akeyless.py  b64decode_secret.py  mask_secret.py  parse_dotenv_secret.py  secret_keys_to_env.py  secret_strength.py  secret_to_json.py  split_pem_bundle.py
plugins/inventory/: akeyless.py
plugins/lookup/: dynamic_secret.py  pki_certificate.py  secret.py
plugins/module_utils/: akeyless_client.py  akeyless_lookup_auth.py  akeyless_plugin_helpers.py
plugins/modules/: account_custom_field.py  account_custom_fields_info.py  auth_method_api_key.py  auth_method_aws_iam.py  auth_method_azure_ad.py  auth_method_cert.py  auth_method_email.py  auth_method_gcp.py  auth_method_huawei.py  auth_method_info.py  auth_method_k8s.py  auth_method_kerberos.py  auth_method_ldap.py  auth_method_oauth2.py  auth_method_oci.py  auth_method_oidc.py  auth_method_saml.py  auth_method_universal_identity.py  auth_methods_info.py  certificate.py  classic_key.py  decrypt.py  decrypt_batch.py  derive_key.py  dfc_key.py  dynamic_secret_artifactory.py  dynamic_secret_aws.py  dynamic_secret_azure.py  dynamic_secret_cassandra.py  dynamic_secret_custom.py  dynamic_secret_dockerhub.py  dynamic_secret_eks.py  dynamic_secret_gcp.py  dynamic_secret_github.py  dynamic_secret_gitlab.py  dynamic_secret_gke.py  dynamic_secret_google_workspace.py  dynamic_secret_hanadb.py  dynamic_secret_k8s.py  dynamic_secret_ldap.py  (+169 more)
plugins/test/: akeyless.py  is_akeyless_access_id.py  is_akeyless_path.py  is_base64.py  is_pem_block.py
roles/akeyless_bootstrap/: README.md
roles/akeyless_install_certificate/: README.md
scripts/: build_reference_docs.py  release.sh
tests/codemod/: fqcn_sweep.py  refactor_info_modules.py
tests/live/: KNOWN-ISSUES.md  MATRIX.json  conftest.py  coverage_matrix.py  fixtures.py
tests/mock/: README.md  (+17 more)
(+232 files in other folders)
